--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             }
 
             .button-position {
-                bottom: 150px; /* Adjusted for better visibility on phones */
+                bottom: 180px; /* Adjusted for better visibility on phones */
             }
 
             .text-btn {
@@ -130,13 +130,13 @@
 </head>
 <body>
     <video autoplay muted loop class="video-background">
-        <source src="vid2.mp4" type="video/mp4"> 
+        <source src="vid2.mp4" type="video/mp4"> <!-- Replace with your video file -->
         Your browser does not support the video tag.
     </video>
     <div class="button-position">
         <div class="button-container">
             <button class="btn" onclick="redirectToVideo()">
-                
+                <!-- Replace with your rotating PNG image -->
                 <img src="img3.png" alt="ධර්ම චක්‍රය">
             </button>
             <center>
@@ -146,7 +146,7 @@
 
     <script>
         function redirectToVideo() {
-            window.location.href = 'video.html'; 
+            window.location.href = 'video.html'; // Make sure to create this page
         }
     </script>
 </body>
