--- a/video.html
+++ b/video.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Full Screen Embedded Video with Autoplay</title>
+    <title>Poson maha pahan kuduwa</title>
     <style>
         body, html {
             margin: 0;
